// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render correctly 1`] = `
.c0 {
  fill: rgb(255,255,255);
  pointer-events: none;
}

<text
  className="value c0"
  size={
    Object {
      "height": 100,
      "width": 10,
    }
  }
  textAnchor="middle"
  transform="translate(5, 30)"
>
  foo
</text>
`;

exports[`Should render correctly for heights less than 40 1`] = `
.c0 {
  fill: rgb(33,33,33);
  pointer-events: none;
}

<text
  className="value c0"
  size={
    Object {
      "height": 20,
      "width": 10,
    }
  }
  textAnchor="middle"
  transform="translate(5, -18)"
>
  foo
</text>
`;
